--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "qs": "^6.13.0",
+    "vercel": "^37.12.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
